include(Documentation)
set(DOXYGEN_RECURSIVE YES)
set(DOXYGEN_JAVADOC_BLOCK YES)
set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_INLINE_SOURCES YES)
set(DOXYGEN_SEARCHENGINE YES)
set(DOXYGEN_SERVER_BASED_SEARCH NO)
set(DOXYGEN_DISABLE_INDEX NO)
set(DOXYGEN_GENERATE_TREEVIEW YES)
set(DOXYGEN_INTERACTIVE_SVG YES)
set(DOXYGEN_DOR_IMAGE_FORMAT svg)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
set(DOXYGEN_TAB_SIZE 2)
set(DOXYGEN_SOURCE_TOOLTIPS YES)
set(DOXYGEN_HTML_DYNAMIC_MENUS YES)
set(DOXYGEN_CLASS_DIAGRAMS YES)
set(DOXYGEN_UML_LOOK YES)
set(DOXYGEN_CALL_GRAPH YES)
set(DOXYGEN_CALLER_GRAPH YES)
set(DOXYGEN_FULL_PATH_NAMES YES)
set(DOXYGEN_STRIP_FROM_PATH "${PROJECT_SOURCE_DIR}")
set(DOXYGEN_INLINE_SOURCES YES)
set(DOXYGEN_ENABLE_PREPROCESSING YES)
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
set(DOXYGEN_CALL_GRAPH YES)
set(DOXYGEN_CALLER_GRAPH  YES)
set(DOXYGEN_DIRECTORY_GRAPH YES)
set(DOXYGEN_EXTRACT_PRIVATE YES)
set(DOXYGEN_ENABLE_PREPROCESSING YES)
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
set(DOXYGEN_PREDEFINED "")
set(DOXYGEN_EXCLUDE "${PROJECT_SOURCE_DIR}/Include/Garfield/EllipticIntegrals.hh")
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${PROJECT_SOURCE_DIR}/README.md")
## HTML OPTIONS ##
set(DOXYGEN_GENERATE_HTML YES)
## LATEX OPTIONS ##
set(DOXYGEN_GENERATE_LATEX YES)
set(DOXYGEN_COMPACT_LATEX YES)
set(DOXYGEN_LATEX_BATCHMODE NO)
set(DOXYGEN_PROJECT_LOGO "${CMAKE_CURRENT_SOURCE_DIR}/imgs/logo.png")
set(DOXYGEN_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/imgs")
set(DOXYGEN_EXAMPLE_PATH "${PROJECT_SOURCE_DIR}/Examples/;${PROJECT_SOURCE_DIR}/Doc/")
set(DOXYGEN_EXAMPLE_RECURSIVE YES)
#set(DOXYGEN_LATEX_EXTRA_STYLESHEET "${CMAKE_CURRENT_SOURCE_DIR}/fixes.tex")
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/header.tex")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/header.tex" "${CMAKE_CURRENT_BINARY_DIR}/header.tex")
  set(DOXYGEN_LATEX_HEADER "${CMAKE_CURRENT_BINARY_DIR}/header.tex")
endif ()
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/imgs/logo.png")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/imgs/logo.png" "${CMAKE_CURRENT_BINARY_DIR}/doxygen/latex/logo.png" COPYONLY)
endif ()
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/footer.tex")
  set(DOXYGEN_LATEX_FOOTER "${CMAKE_CURRENT_SOURCE_DIR}/footer.tex")
endif ()
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/style.sty")
  set(DOXYGEN_LATEX_EXTRA_STYLESHEET "${CMAKE_CURRENT_SOURCE_DIR}/style.sty")
endif ()
doxyfile_docs(LUALATEX "${PROJECT_SOURCE_DIR}/Include/Garfield/;${PROJECT_SOURCE_DIR}/README.md")

find_package(LATEX OPTIONAL_COMPONENTS LUALATEX)
if(LATEX_LUALATEX_FOUND)

  set(USERGUIDE_SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Appendix.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Components.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Examples.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Installation.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Introduction.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Layout.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Media.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Signals.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Solids.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Titlepage.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Tracks.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/Transport.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/UserGuide.bib
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/UserGuide.tex
    ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/garfield.jpg
  )
  add_custom_target(doc-user-guide SOURCES ${USERGUIDE_SOURCE}
                    COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/UserGuide/
                    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/UserGuide.bib ${CMAKE_CURRENT_BINARY_DIR}/UserGuide/UserGuide.bib
                    COMMAND "${LUALATEX_COMPILER}" -shell-escape -draftmode --output-directory=${CMAKE_CURRENT_BINARY_DIR}/UserGuide/ ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/UserGuide.tex
                    COMMAND "${BIBER_COMPILER}" --output-directory=${CMAKE_CURRENT_BINARY_DIR}/UserGuide/ ${CMAKE_CURRENT_BINARY_DIR}/UserGuide/UserGuide.bcf
                    COMMAND "${LUALATEX_COMPILER}" -shell-escape --output-directory=${CMAKE_CURRENT_BINARY_DIR}/UserGuide/ ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/UserGuide.tex
                    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/UserGuide/
                    BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/UserGuide/UserGuide.pdf
                    COMMENT "Generating User Guide.")
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/UserGuide/UserGuide.pdf DESTINATION "${CMAKE_INSTALL_DOCDIR}/pdf" COMPONENT docs)
else()
  add_custom_target(doc-user-guide "${CMAKE_COMMAND}" -E true COMMENT "${Yellow}LuaLaTeX not found ! Can compile UserGuide.pdf${Reset}")
endif()
add_dependencies(docs doc-user-guide)
