# --- AliceTPC
add_subdirectory(AliceTPC)
# --- AnalyticField
add_subdirectory(AnalyticField)
# --- Ansys121
add_subdirectory(Ansys121)
# --- Ansys123
add_subdirectory(Ansys123)
# --- Asacusa
add_subdirectory(Asacusa)
# --- Bichsel
add_subdirectory(Bichsel)
# --- Comsol
add_subdirectory(Comsol)
# --- CST
add_subdirectory(CST)
# --- Degrade
add_subdirectory(Degrade)
# --- DelayedSignal
add_subdirectory(DelayedSignal)
# --- DriftTube
add_subdirectory(DriftTube)
# --- Electroluminescence
add_subdirectory(Electroluminescence)
# --- Elmer
add_subdirectory(Elmer)
# --- GainFluctuations
add_subdirectory(GainFluctuations)
# --- GasFile
add_subdirectory(GasFile)
# --- Geant4GarfieldInterface
add_subdirectory(Geant4GarfieldInterface)
# --- Gem
add_subdirectory(Gem)
# --- GemGPU
add_subdirectory(GemGPU)
# --- GemMovie
add_subdirectory(GemMovie)
# --- Grid
add_subdirectory(Grid)
# --- Heed
add_subdirectory(Heed)
# --- MicroscopicSpaceCharge
add_subdirectory(MicroscopicSpaceCharge)
# --- neBEM
add_subdirectory(neBEM)
# --- Paschen
add_subdirectory(Paschen)
# --- RPC
add_subdirectory(RPC)
# --- RPCSpaceCharge
add_subdirectory(RPCSpaceCharge)
# --- Signals
add_subdirectory(Signals)
# --- Silicon
add_subdirectory(Silicon)
# --- Srim
add_subdirectory(Srim)
# --- Tcad
add_subdirectory(Tcad)
# --- TcadDelayed
add_subdirectory(TcadDelayed)
# --- Trapping
add_subdirectory(Trapping)
# --- Voxel
add_subdirectory(Voxel)
